--- a/angular.html
+++ b/angular.html
@@ -18,12 +18,12 @@
       </header>
       <section id="mainSlider">
         <ul class="slideContainer">
-          <li ng-repeat="number in images" class="slideContent"><img src="image/{{data[number].url}}" width="640"></li>
+          <li ng-repeat="number in slideLength" class="slideContent"><img src="image/{{data[number].url}}" width="640"></li>
         </ul>
-        <div class="arrows"><span ng-click="slide('left')" ng-class="isFirst()" class="icon arrowLeft"><</span><span ng-click="slide('right')" ng-class="isLast()" class="icon arrowRight">=</span></div>
+        <div class="arrows"><span ng-click="decrease('slideNumber')" ng-class="{ac: slideNumber != 1}" class="icon arrowLeft"><</span><span ng-click="increase('slideNumber')" ng-class="{ac: slideNumber != 5}" class="icon arrowRight">=</span></div>
         <nav class="slideNavi">
           <ul>
-            <li ng-repeat="number in images" ng-class="isNumber(number)" ng-click="slide(number)" class="slideNaviList"><img src="image/{{data[number].url}}" width="110"></li>
+            <li ng-repeat="number in slideLength" ng-click="eq('slideNumber', (number + 1))" ng-class="{ac: slideNumber == (number + 1)}" class="slideNaviList"><img src="image/{{data[number].url}}" width="110"></li>
           </ul>
         </nav>
       </section>
